# book_crawling

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  alembic.ini  book_info.py  book_info_save.py  book_scraper.py  chrome_controler.py  file.txt  http_crawler.py  isbn.txt  kyobo.py  launcher.py  login.yaml  main.py  main.spec  memo.txt  process.txt  pyproject.toml  selenium_test.py  selenium_test.spec  tempCodeRunnerFile.py  test.py  test02.py  후딱.spec
2nd_env/: pyvenv.cfg
2nd_env/Scripts/: activate  activate.bat
EunDan/: book_crawling.py  book_crawling.spec  file.py  isbn.txt_  isbn_test2.txt  process.txt  run.bat  t.py  test1.py
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  launcher.py  main.py
app/config/: playwright.py  settings.py
app/domain/: enums.py  errors.py  interfaces.py  schemas.py
app/web/: __init__.py  routes.py
app/worker/: processor.py  queue.py
docs/: architecture.md  runbook.md  session-handoff.md  status.md  windows_desktop.md
docs/adr/: 001-stack.md  002-yes24-only-v1.md
legacy/: README.md
legacy/docs/: project_analysis.md
legacy/notes/: isbn.txt  process.txt
legacy/src/: book_crawling.py  book_info.py  book_info_save.py  chrome_controler.py  main.py  test.py  test02.py
scripts/: bootstrap.sh  build_windows.ps1  build_windows.py  dev.ps1  dev.sh  smoke.sh  stop.sh  test.sh
tests/: test_build_windows.py  test_image_pipeline.py  test_launcher.py  test_playwright_runtime.py  test_settings_runtime.py  test_web_routes.py  test_worker_processor.py  test_yes24_adapter.py  test_yes24_parser.py
(+29 files in other folders)
