[project]
name = "book-crawling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pillow>=11.3.0",
    "pyinstaller>=6.14.2",
    "pyyaml>=6.0.2",
    "selenium>=4.34.2",
    "selenium-stealth>=1.0.6",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
    "xlsxwriter>=3.2.5",
]
